<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Crazy Race</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>

    <!-- Menu -->
    <string name="nueva">New Game</string>
    <string name="ranking">Ranking</string>
    <string name="opciones">Settings</string>
        
 	<!-- Nueva partida -->
    <string name="playButton">Start Game</string>
    <string name="levelLabel">Level:  </string>
    <string name="stageLabel">Stage: </string>
    
    <string name="levelEasy"> Easy </string>
    <string name="levelMedium"> Normal </string>
    <string name="levelHard"> Hard </string>
    
    
    <!-- Content Description -->
    <string name="back_cnt_desc">Background</string>
    <string name="title_cnt_desc">Title</string>
    
     <!-- Opciones -->
    <string name="lang">Language: </string>
    <string name="nombre">Name: </string>
    <string name="sonido">Sound: </string>

    <!-- Fin de partida -->
    <string name="ganas">You Win! </string>
    <string name="pierdes">You Lose! </string>
    <string name="monedas">Coins: </string>
    <string name="tiempo">Time: </string>

    <!-- Default values -->

    <string name="defaulPlayerName">Player</string>

    <!-- Ranking -->
    <string name="rankingStage">Stage</string>
    <string name="rankingCoins">Coins</string>
    <string name="rankingTime">Time</string>

    

</resources>
