<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="20" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="60"
        android:orientation="vertical" >

        <Button
            android:id="@+id/nueva_button"
            style="@style/MenuButtons"
            android:onClick="nueva"
            android:text="@string/nueva" />

        <Button
            android:id="@+id/unirse_button"
            style="@style/MenuButtons"
            android:onClick="unirse"
            android:text="@string/ranking" />

        <Button
            android:id="@+id/opciones_button"
            style="@style/MenuButtons"
            android:onClick="opciones"
            android:text="@string/opciones" />
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="20" />

</LinearLayout>