<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="-16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="12"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/atras_unirse"
            style="@style/MenuBackButton"
            android:onClick="atras" />
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8" />

    <LinearLayout
        android:id="@+id/tab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="60"
        android:orientation="vertical" >
        <LinearLayout
            android:id="@+id/tabButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/easy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="32"
                android:text="@string/levelEasy"
                style="@style/RankingFontTitle"
                android:onClick="onChangeRanking"
                android:clickable="true"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#FF444444"/>
            <TextView
                android:id="@+id/medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="32"
                android:text="@string/levelMedium"
                style="@style/RankingFontTitle"
                android:onClick="onChangeRanking"
                android:clickable="true"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#FF444444"/>
            <TextView
                android:id="@+id/hard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="32"
                android:text="@string/levelHard"
                style="@style/RankingFontTitle"
                android:onClick="onChangeRanking"
                android:clickable="true"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FF444444"
            style="@style/RankingTitleMargin"
            />

        <LinearLayout
            android:id="@+id/rankingHeaders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/stage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="32"
                android:text="@string/rankingStage"
                style="@style/RankingFontHeader"/>

            <TextView
                android:id="@+id/coins"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="32"
                android:text="@string/rankingCoins"
                style="@style/RankingFontHeader"
                />

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="32"
                android:text="@string/rankingTime"
                style="@style/RankingFontHeader"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FF444444"
            style="@style/RankingHeaderMargin"
            />

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/scrollPartidas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>



    </LinearLayout>



    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="20" />

</LinearLayout>