<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="12"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/atras_nueva_partida"
            style="@style/MenuBackButton"
            android:onClick="atras" />
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="77"
        android:orientation="vertical" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:orientation="horizontal" >

            <TextView
                style="@style/MenuOptionsFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/levelLabel" />    

            <TextView
                android:id="@+id/level"
                style="@style/MenuOptionsFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <SeekBar
                android:id="@+id/seekBarLevel"
                style="@style/seek"
                android:max="2"
                android:progress="1"
                android:progressDrawable="@drawable/progress_seekbar"
                android:thumb="@drawable/thumbseekbar" />


        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:orientation="horizontal" >

            <TextView
                style="@style/MenuOptionsFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stageLabel" />       
            <Button
                style="@style/leftarrow"
                android:onClick="prevStage"
                />
            <TextView
                android:id="@+id/stageField"
                style="@style/stagenumber"
           		android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />
            <Button
                style="@style/rightarrow"
                android:onClick="nextStage"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:orientation="horizontal"
            android:gravity="right">

            <Button
                android:id="@+id/startGame"
                style="@style/MenuButtonsStartGame"
                android:gravity="center_horizontal"
                android:onClick="startGame"
                android:text="@string/playButton" />
        </LinearLayout>
        
        
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="10" />

</LinearLayout>