<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="12"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/atras_opciones"
            style="@style/MenuBackButton"
            android:onClick="atras" />
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="60"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="28"
            android:orientation="horizontal" >

            <TextView
                style="@style/MenuOptionsFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre" />
            
            <EditText
                android:id="@+id/username"
                style="@style/MenuOptionsFont"
           		android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
                     
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:orientation="horizontal" >

            <TextView
                style="@style/MenuOptionsFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lang" />

            <Button
                android:id="@+id/spanish_lang"
                style="@style/MenuSpanishButton"
                android:onClick="langSpanish" />

            <Button
                android:id="@+id/english_lang"
                style="@style/MenuEnglishButton"
                android:onClick="langEnglish" />
          
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="38"
            android:orientation="horizontal" >

            <TextView
                style="@style/MenuOptionsFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sonido" />

            <TextView
                android:id="@+id/volumen"
                style="@style/MenuOptionsFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <SeekBar
                android:id="@+id/seekBarVolumen"
                style="@style/seek"
                android:max="100"
                android:progress="50"
                android:progressDrawable="@drawable/progress_seekbar"
                android:thumb="@drawable/thumbseekbar" />

            
            
        </LinearLayout>
        
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="20" />

</LinearLayout>